# dhm

./: CMakeLists.txt  README.md
client/: client.cpp
include/dhm/: common.h  matrix.h  operation.h  protocol.h  splitter.h
worker/: worker.cpp
